kubernetes/k3s-prod-a/workloads/readarr/stateful-set.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: readarr
  namespace: torrenting
spec:
  replicas: 1
  selector:
    matchLabels:
      app: readarr
  template:
    metadata:
      labels:
        app: readarr
    spec:
      containers:
        - name: readarr
          image: docker.io/linuxserver/readarr:0.4.12-nightly@sha256:2c7fec8d3e31e3619860e143438a9e09309ec358d6803a9aa493105bc5e9c0f9
          ports:
            - containerPort: 8787
          volumeMounts:
            - name: readarr-config
              mountPath: /config
            - name: readarr-downloads
              mountPath: /downloads
            - name: readarr-books
              mountPath: /books
      volumes:
        - name: readarr-config
          persistentVolumeClaim:
            claimName: readarr-config
        - name: readarr-downloads
          persistentVolumeClaim:
            claimName: readarr-downloads
        - name: readarr-books
          persistentVolumeClaim:
            claimName: readarr-books
